bdr.BDR.scala.error
Erreur de compilation :
BDR:21: error: Unmatched closing brace '}' ignored here
	}
        ^